--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,6 @@ sketch
 # https://plugins.jetbrains.com/plugin/12206-codestream
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,eclipse,intellij,java,react,git
+/spelline-backend/.mvn/wrapper
+/spelline-backend/mvnw
+/spelline-backend/mvnw.cmd
